fix: adjust vertical alignment of circular indicator icon

--- a/src/styles/pages/index.sass
+++ b/src/styles/pages/index.sass
@@ -106,6 +106,7 @@
 			display: block
 			width: 24px
 			height: 24px
+			margin-top: 1px
 			flex-shrink: 0
 			border-radius: 50%
 			background: linear-gradient(270deg, $sd-color__palette-yellow-300, $sd-color__palette-yellow-100)
